# quote-rs

./: Cargo.toml  README.md  qod.json
examples/: qod.rs
sample_json/: authors_response.json  bad-category.json  category.json  image.json  image_bad.json  qod-category.json  qod2.json  qod_bad_sample.json  qod_sample.json  single-quote.json  unauthorized.json
src/: lib.rs  public.rs  quote.rs
src/model/: author.rs  category.rs  image.rs  mod.rs  quote.rs
src/service/: mod.rs  query.rs  quote.rs  response.rs  service.rs
tests/: quote_service.rs
