[package]
authors = ["J/A <archer884@gmail.com>"]
name = "quote-rs"
version = "0.1.0"

[dependencies]
clippy = {version = "*", optional = true}
hyper = {version = "*", default-features = false}
serde = "*"
serde_json = "*"
serde_macros = "*"
url = "1.1.1"

[dev-dependencies]
dotenv = "*"

[features]
default = []
